Category API fixed, crud frontend using token, and datatable ajax reload
Category API method get and delete using path variable; crud frontend using token through ajax jquery; and datatable ajax reload.

--- a/src/main/resources/templates/admins/addCategory.html
+++ b/src/main/resources/templates/admins/addCategory.html
@@ -65,35 +65,13 @@
                                         <table id="dataTable" class="table table-hover table-bordered">
                                             <thead>
                                                 <tr>
-                                                    <th>#</th>
+                                                    <th>id</th>
                                                     <th>Category</th>
                                                     <th>Created At</th>
-                                                    <th>Aksi</th>
+                                                    <th>Action</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
-                                                <tr th:each="category: ${listOfCategory}">
-                                                    <td th:text="${category.id}">1</td>
-                                                    <td><strong th:text="${category.name}">Category</strong></td>
-                                                    <td>Date Created</td>
-                                                    <td>
-                                                        <div class="btn-toolbar btn-toolbar-sm btn-block">
-                                                            <span>
-                                                                <a href="" class="btn btn-warning mr-2"
-                                                                    data-toggle="modal" data-target="#editCategoryModal"
-                                                                    th:onclick="'javascript:getCategoryById(' + ${category.id} + ');'"><i
-                                                                        class="fas fa-edit"></i></a>
-                                                            </span>
-                                                            <span>
-                                                                <a href="" class="btn btn-danger mr-2"
-                                                                    data-toggle="modal"
-                                                                    data-target="#deleteCategoryModal"
-                                                                    th:onclick="'javascript:setDeleteId(' + ${category.id} + ');'"><i
-                                                                        class="fas fa-trash"></i></a>
-                                                            </span>
-                                                        </div>
-                                                    </td>
-                                                </tr>
                                             </tbody>
                                         </table>
                                     </div>
@@ -109,7 +87,7 @@
         </div>
     </div>
 
-    <!-- modal edit -->
+    <!-- modal add new -->
     <div class="modal fade" id="addCategoryModal">
         <div class="modal-dialog modal-lg">
             <div class="modal-content">
@@ -126,7 +104,7 @@
                         <div class="card-body">
                             <div class="form-group">
                                 <label for="name">Category Title</label>
-                                <input type="text" id="name" class="form-control" name="name" required>
+                                <input type="text" id="name" class="form-control" name="name">
                             </div>
                         </div>
                         <!-- /.card-body -->
@@ -142,6 +120,7 @@
         <!-- /.modal-dialog -->
     </div>
     <!-- /.modal -->
+
     <!-- Modal For Deleting Category -->
     <div class="modal fade" id="deleteCategoryModal">
         <div class="modal-dialog modal-sm">
@@ -206,7 +185,53 @@
     <div th:include="admins/fragments/footer::templateScript"></div>
 
     <script>
+        var table;
         var token = localStorage.getItem('token');
+
+        $(document).ready(function () {
+            table = $('#dataTable').DataTable({
+                "processing": false,
+                "serverSide": false,
+                ajax: {
+                    dataSrc: "payload",
+                    url: 'http://127.0.0.1:8081/api/category',
+                    type: "GET",
+                    dataType: 'json',
+                    beforeSend: function (xhr) {
+                        xhr.setRequestHeader("Authorization", "Basic " + token);
+                    },
+                },
+                columns: [
+                    { data: 'id', title: 'ID' },
+                    { data: 'name' },
+                    {
+                        data: 'datetime',
+                        render: function (data, type, row) {
+                            return `Datetime`;
+                        },
+                    },
+                    {
+                        data: 'id',
+                        render: function (data, type, row) {
+                            return `<div class="btn-toolbar btn-toolbar-sm btn-block">
+                            <span>
+                                <a href="" class="btn btn-warning mr-2"
+                                    data-toggle="modal" data-target="#editCategoryModal" onclick="getCategoryById('` + data + `');"><i
+                                        class="fas fa-edit"></i></a>
+                            </span>
+                            <span>
+                                <a href="" class="btn btn-danger mr-2"
+                                    data-toggle="modal"
+                                    data-target="#deleteCategoryModal"
+                                    onclick="setDeleteId('` + data + `');"><i
+                                        class="fas fa-trash"></i></a>
+                            </span>
+                        </div>`;
+                        }
+                    }
+                ]
+            })
+        });
 
         $('#createCategory').on('click', function () {
             var name = $("#name").val();
@@ -216,13 +241,16 @@
                 url: "http://127.0.0.1:8081/api/category/save",
                 method: "POST",
                 data: JSON.stringify(category),
-                contentType: "application/json;odata=verbose",
+                contentType: "application/json",
                 beforeSend: function (xhr) {
                     xhr.setRequestHeader("Authorization", "Basic " + token);
                 },
                 success: function (response) {
                     if (response.status == true) {
-                        alert("data success!");
+                        $('#addCategoryModal').modal('toggle');
+                        $('#name').val(null);
+                        alert("Insert data success!");
+                        table.ajax.reload();
                     } else {
                         console.log('Anda Gagal Menambahkan Data. Mohon Coba Kembali!');
                     }
@@ -239,16 +267,17 @@
 
         $('#deleteCategory').on('click', function () {
             var id = $('#deleteId').val();
-            var category = new Object();
-            category.id = id;
             $.ajax({
-                url: "http://127.0.0.1:8081/api/category",
-                method: "DELETE",
-                data: JSON.stringify(category),
+                url: "http://127.0.0.1:8081/api/category/delete/" + id,
+                method: "POST",
                 contentType: "application/json",
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Authorization", "Basic " + token);
+                },
                 success: function (response) {
                     if (response.status == true) {
                         $('#deleteCategoryModal').modal('toggle');
+                        table.ajax.reload();
                         alert("Hapus sukses!");
                     } else {
                         console.log('Anda Gagal Menambahkan Data. Mohon Coba Kembali!');
@@ -262,9 +291,12 @@
 
         function getCategoryById(id) {
             $.ajax({
-                url: "http://127.0.0.1:8081/api/category/get",
+                url: "http://127.0.0.1:8081/api/category/get/" + id,
                 method: "GET",
                 data: { id: id },
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Authorization", "Basic " + token);
+                },
                 success: function (response) {
                     $('#editId').val(null);
                     $('#editName').val(null);
@@ -285,10 +317,13 @@
             category.id = id;
             category.name = name;
             $.ajax({
-                url: "http://127.0.0.1:8081/api/category",
+                url: "http://127.0.0.1:8081/api/category/save",
                 method: "POST",
                 data: JSON.stringify(category),
                 contentType: "application/json",
+                beforeSend: function (xhr) {
+                    xhr.setRequestHeader("Authorization", "Basic " + token);
+                },
                 success: function (response) {
                     if (response.status == true) {
                         $('#editCategoryModal').modal('toggle');
