--- a/src/main/resources/templates/admins/fragments/footer.html
+++ b/src/main/resources/templates/admins/fragments/footer.html
@@ -46,7 +46,7 @@
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js"
             crossorigin="anonymous"></script>
-        <script th:src="@{/admins/assets/demo/datatables-demo.js}"></script>
+        <!-- <script th:src="@{/admins/assets/demo/datatables-demo.js}"></script> -->
         <script>
             function logout() {
                 localStorage.removeItem("token");
