add salesReport Entity, Repo, Service, DTO
add salesReport Entity, Repo, Service, DTO
Change to Delete Method for delete Endpoint

--- a/src/main/resources/templates/customers/fragments/header.html
+++ b/src/main/resources/templates/customers/fragments/header.html
@@ -76,8 +76,8 @@
                         <div class="header__right">
                             <div class="header__right__auth">
                                 <span  id="loginBtnSide">
-                                    <a href="#">Login</a>
-                                    <a href="#">Register</a>
+                                    <a href="./login">Login</a>
+                                    <a href="./registration">Register</a>
                                 </span>
                             </div>
                             <ul class="header__right__widget">
