access foreign key thymeleaf added

--- a/src/main/resources/templates/admins/fragments/header.html
+++ b/src/main/resources/templates/admins/fragments/header.html
@@ -14,11 +14,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/js/all.min.js"
         crossorigin="anonymous"></script>
     <script>
-        var token = localStorage.getItem('token');
-        var roles = localStorage.getItem('roles');
-        if (token === null) {
-            window.location.href = "../admin/login";
-        }
+        // var token = localStorage.getItem('token');
+        // var roles = localStorage.getItem('roles');
+        // if (token === null) {
+        //     window.location.href = "../admin/login";
+        // }
     </script>
 </head>
 
