--- a/src/main/resources/templates/admins/product.html
+++ b/src/main/resources/templates/admins/product.html
@@ -55,7 +55,7 @@
                                                     <tr>
                                                         <td th:text="${product.id}">1</td>
                                                         <td><strong th:text="${product.name}">Category</strong></td>
-                                                        <td>Brand</td>
+                                                        <td><strong th:text="${product.brand.name}"></strong>Brand</td>
                                                         <td>Category</td>
                                                         <td>
                                                             <div class="btn-toolbar btn-toolbar-sm btn-block">
