--- a/src/main/resources/templates/admins/order.html
+++ b/src/main/resources/templates/admins/order.html
@@ -44,34 +44,31 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <tr>
-                                            <th scope="row">1</th>
-                                            <td>Mark</td>
-                                            <td>3</td>
-                                            <td>12.000</td>
-                                            <td>36.000</td>
-                                        </tr>
-                                        
+                                                                                
                                     </tbody>
                                 </table>
-                                <p class="col-sm-12"><b>Total Product Price : </b><span id="productPriceForm">36.000</span></p >
-                                <p class="col-sm-12"><b>Payment Method : </b><span id="bankForm">Bank Central Asia</span></p >
-                                <p class="col-sm-12"><b>Shipping Agency : </b><span id="shippingAgencyForm">JNE</span></p >
-                                <p class="col-sm-12"><b>Shipping Fee : </b><span id="shippingFeeForm">20.000</span></p >
-                                <p class="col-sm-12"><b>Address Destination : </b><span id="destinationForm">Surabaya</span></p >
-                                <p class="col-sm-12"><b>Total Order Price : </b><span id="totalOrderForm">56.000</span></p >
-                                <p class="col-sm-12 col-md-6"><b>Order Status : </b>
-                                    <select class="custom-select" id="statusForm">
-                                        <option selected>Open this select menu</option>
-                                        <option value="1">One</option>
-                                        <option value="2">Two</option>
-                                        <option value="3">Three</option>
-                                    </select>
-                                </p >
-                                <p class="form-group col-sm-12 col-md-6">
-                                    <b>Receipt Number :</b>
-                                    <input type="text" class="form-control" id="receiptForm" placeholder="Receipt Number">
-                                </p>
+                                <div class="col-sm-12 col-md-6">
+                                    <ul>
+                                        <li ><b>Total Product Price : </b><span id="productPriceForm">36.000</span></li >
+                                        <li ><b>Payment Method : </b><span id="bankForm">Bank Central Asia</span></li >
+                                        <!-- <li ><b>Shipping Agency : </b><span id="shippingAgencyForm">JNE</span></li > -->
+                                        <li ><b>Shipping Fee : </b><span id="shippingFeeForm">20.000</span></li >
+                                        <li ><b>Address Destination : </b><span id="destinationForm">Surabaya</span></li >
+                                        <li ><b>Total Order Price : </b><span id="totalOrderForm">56.000</span></li >
+                                    </ul>
+                                </div>
+                                
+                                <div class="col-sm-12 col-md-6">
+                                    <p class="col-sm-12"><b>Order Status : </b>
+                                        <select class="custom-select" id="statusForm">
+                                            
+                                        </select>
+                                    </p >
+                                    <p class="form-group col-sm-12">
+                                        <b>Receipt Number :</b>
+                                        <input type="text" class="form-control" id="receiptForm" placeholder="Receipt Number">
+                                    </p>
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -113,17 +110,8 @@
                                                 <th>Action</th>
                                             </tr>
                                         </tfoot>
-                                        <tbody>
-                                            <tr>
-                                                <td>dgoaoa daoghoa</td>
-                                                <td>2020-23-2</td>
-                                                <td>120.000</td>
-                                                <td>In proccess</td>
-                                                <td>
-                                                    <span class="btn btn-primary" data-toggle="modal" data-target="#orderDetailModal">view <i class="fa fa-edit"></i></span>
-                                                    <span class="btn btn-danger">Cancel <i class="fa fa-times"></i></span>
-                                                </td>
-                                            </tr>
+                                        <tbody id="listData">
+                                            
                                             
                                         </tbody>
                                     </table>
@@ -135,14 +123,125 @@
                 <div th:replace="admins/fragments/footer::adminsFooter"></div>
             </div>
         </div>
+        <script>
+            var orderStatusAll;
+            var orderAll;
+            var token = localStorage.getItem('token');
+            fetch("http://localhost:8081/api/order",{
+                // Adding method type 
+                method: "GET", 
+                                
+                // Adding headers to the request 
+                headers: { 
+                    "Content-type" : "application/json; charset=UTF-8",
+                    "Authorization" : "Basic "+token
+                } 
+            })
+            .then(response => response.json())
+            .then(result => {
+                orderAll = result.payload;
+                var displayData = "";
+                
+                orderAll.forEach((element,i) => {
+                    // console.log(element.customer.name);
+                    displayData += `<tr>
+                        <td>`+element.customer.name+`</td>
+                        <td>`+element.dateOrder+`</td>
+                        <td>`+element.totalPrice+`</td>
+                        <td>`+element.orderStatus.orderstatus+`</td>
+                        <td>
+                            <span class="btn btn-primary" onclick="showModalDetail(`+i+`)" data-toggle="modal" data-target="#orderDetailModal">view <i class="fa fa-edit"></i></span>
+                            <span class="btn btn-danger">Cancel <i class="fa fa-times"></i></span>
+                        </td>
+                    </tr>`;
+                });
+                
+                document.getElementById("listData").innerHTML= displayData;
+                
+            }).catch(err => {
+                errorStat = err.name === 'AbortError'? 1 : 2;
+            });
+
+            fetch("http://localhost:8081/api/orderStatus",{
+                // Adding method type 
+                method: "GET", 
+                                
+                // Adding headers to the request 
+                headers: { 
+                    "Content-type" : "application/json; charset=UTF-8",
+                    "Authorization" : "Basic "+token
+                } 
+            })
+            .then(response => response.json())
+            .then(result => {
+                orderStatusAll = result.payload;
+                // console.log(orderStatusAll);               
+            }).catch(err => {
+                errorStat = err.name === 'AbortError'? 1 : 2;
+            });
+
+            function showModalDetail(idOrder){
+                // console.log(orderAll)
+                document.getElementById("orderForm").innerHTML=orderAll[idOrder].id;
+                document.getElementById("dateForm").innerHTML=orderAll[idOrder].dateOrder;
+                document.getElementById("customerForm").innerHTML=orderAll[idOrder].customer.name;
+
+                document.getElementById("productPriceForm").innerHTML=orderAll[idOrder].totalPrice;
+                document.getElementById("bankForm").innerHTML=orderAll[idOrder].paymentMethod.name;
+                document.getElementById("shippingFeeForm").innerHTML=orderAll[idOrder].shippingFee;
+                document.getElementById("destinationForm").innerHTML=orderAll[idOrder].deliveryAddress;
+                document.getElementById("totalOrderForm").innerHTML=orderAll[idOrder].totalPrice;
+                
+                var statusData = "";
+                orderStatusAll.forEach((element,i) => {
+                    // console.log(element.customer.name);
+                    if(orderAll[idOrder].orderStatus.orderstatus==element.orderstatus)
+                        statusData += `<option value="`+element.id+`" selected>`+element.orderstatus+`</option>`;
+                    else
+                        statusData += `<option value="`+element.id+`">`+element.orderstatus+`</option>`;
+                });
+                document.getElementById("statusForm").innerHTML=statusData;
+            
+                
+                fetch("http://localhost:8081/api/orderDetail/show/"+orderAll[idOrder].id,{
+                    // Adding method type 
+                    method: "GET", 
+                                    
+                    // Adding headers to the request 
+                    headers: { 
+                        "Content-type" : "application/json; charset=UTF-8",
+                        "Authorization" : "Basic "+token
+                    } 
+                })
+                .then(response => response.json())
+                .then(result => {
+                    var listDetailOrder =``; 
+                    console.log(result.payload);
+                    // orderAll.forEach((element,i) => {
+                        
+                    //     displayData += `
+                    //     <tr>
+                    //         <th scope='row'>1</th>
+                    //         <td>Mark</td>
+                    //         <td>3</td>
+                    //         <td>12.000</td>
+                    //         <td>36.000</td>
+                    //     </tr>`;
+                    // });                             
+                }).catch(err => {
+                    errorStat = err.name === 'AbortError'? 1 : 2;
+                });
+
+
+            }
+        </script>
         <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
         <script th:src="@{/admins/js/scripts.js}"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
-        <script th:src="@{/admins/assets/demo/chart-area-demo.js}"></script>
-        <script th:src="@{/admins/assets/demo/chart-bar-demo.js}"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js" crossorigin="anonymous"></script>
         <script src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js" crossorigin="anonymous"></script>
         <script th:src="@{/admins/assets/demo/datatables-demo.js}"></script>
+
+        
     </body>
 </html>
